Update viewport on index html

--- a/init/src/index.html
+++ b/init/src/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, min-width=650px" />
+  <meta name="viewport" content="width=device-width" />
   <link rel="apple-touch-icon" sizes="180x180" href="./images/icon.png?width=180&height=180" />
   <link rel="icon" type="image/png" sizes="32x32" href="./images/icon.png?width=32&height=32" />
   <link rel="icon" type="image/png" sizes="16x16" href="./images/icon.png?width=16&height=16" />
